--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "https://robin7012.github.io/project-react-1/build"
 }
